# engine-setup

./: CMakeLists.txt  README.md  main.c
include/sokol/: sokol_app.h
util/: fileread.c  implementations.c  input.c  lerp.c  window.c
util/include/: fileread.h  general.h  input.h  lerp.h  window.h
